2004-06-21  Pierre-Luc Paour <gallery@paour.com> (1.4-b15)

	* Improved DE language file (thanks Joerg Napp).
	* Attempted to fix a bug with urlFull handling in embedded applets.

2004-06-02  Pierre-Luc Paour <gallery@paour.com> (1.4-b14)

	* Resize before upload is now a 1-dimension editable ComboBox
	  of popular sizes, like Gallery.
	* Fixed displaying information at the bottom of slideshow.
	* When constraining to aspect ratio while cropping, now
	  able to use portrait and landscape of aspect ratio.
	* Fixed EXIF support to trim spaces.

2004-05-18  Pierre-Luc Paour <gallery@paour.com> (1.4-b13)

	* Added support for non-8bit characters in album and image data.
	  If GR is running in a non-international system and the default
	  font used by Java is not able to display the text correctly,
	  the FONT_OVERRIDE_* properties can force GR to use any system
	  font.
	  This only works if the album and image data are encoded by
	  Gallery in HTML entities (&#xxxx;). When adding albums and
	  images, it only works if automatic HTML escaping is on.
	* Added support for running GR in l10n-development mode by setting
	  uiLocaleDev=true in the prefs. This will load the language files
	  from img/ so they're easy to modify.
	* Fixed a problem in the applet where using the applet and then
	  moving to another tab and coming back would result in the list
	  of pictures being "Problem...".
	* Added credits for translators in Locale prefs.
	* Fixed some bugs when no Gallery profile yet exists.

2004-05-11  Pierre-Luc Paour <gallery@paour.com> (1.4-b12)

	* Fixed failure to resize GIFs in Java.

2004-05-11  Pierre-Luc Paour <gallery@paour.com> (1.4-b11)

	* Fixed NPE when leaving slideshow applet.

2004-05-11  Pierre-Luc Paour <gallery@paour.com> (1.4-b10)

	* Fixed upload (and slideshow) applets when Gallery is embedded in a CMS.
	* Applets now attempt to use the same language as the Gallery (GR language
	  support is sorely lacking at the moment).